2004-11-09  Duncan Mak  <duncan@ximian.com>

	* NonEmptyStringConfigurationProperty.cs: Add XML_DEP, this should
	fix the build.

2004-11-09  Lluis Sanchez Gual <lluis@novell.com>

	* ConfigurationElement.cs: Implemented Equals and GetHashCode.
	Only reflect properties from type's members if the type does not
	override Properties.
	* ConfigurationElementCollection.cs: Implemented Equals and GetHashCode.
	Other minor fixes.
	* ConfigurationProperty.cs: It is not a subclass of ConfigurationElement.
	* NonEmptyStringConfigurationProperty.cs, NonEmptyStringFlags.cs:
	Implemented.
	
2004-11-09  Lluis Sanchez Gual <lluis@novell.com>

	* AppSettingsSection.cs: Mostly implemented (missing support for
	file attribute).
	* ConfigHelper.cs: GetNameValueCollection now returns a 
	ConfigNameValueCollection instance which is a NameValueCollection with a
	modification flag.
	* ConfigInfo.cs: Added XPath property.
	* Configuration.cs: Implemented AppSettings property. Set the Path property
	of sections and groups.
	* ConfigurationElement.cs: Support key serialization. Properly reset
	nested elements.
	* ConfigurationElementCollection.cs: Initial implementation.
	* ConfigurationSection.cs: Impemented Path and GetRuntimeObject.
	* ConfigurationSectionGroup.cs: Implemented Path.
	* SectionGroupInfo.cs: Little fix.

2004-11-05  Lluis Sanchez Gual <lluis@novell.com>

	* Configuration.cs: Minor fixes.
	* ConfigurationElement.cs: Added support for the different update modes.
	* SectionGroupInfo.cs: Support loading the same configuration section
	  from different files.
	* SectionInfo.cs: Properly write back configuration data for which a
	  section object has not been created.

2004-11-04  Lluis Sanchez Gual <lluis@novell.com>

	* AppSettingsSection.cs, ConfigurationPropertyCollection.cs,
	  ConfigurationValidationAttribute.cs, ConnectionStringsSection.cs,
	  ProtectedConfigurationProvider.cs, ProviderBase.cs
	  RuntimeOnlySection.cs: Fixed formatting and added missing TODOs.
