@@ -1,3 +1,8 @@
+2004-11-15  Lluis Sanchez Gual <lluis@novell.com>
+
+	* TimeSpanConfigurationProperty.cs, TimeSpanPropertyFlags.cs,
+	TimeSpanSerializedFormat.cs: Implemented.
+
 2004-11-09  Duncan Mak  <duncan@ximian.com>
 
 	* NonEmptyStringConfigurationProperty.cs: Add XML_DEP, this should
